--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "backend:install": "cd backend && npm install"
   },
   "dependencies": {
+    "@types/jspdf": "^1.3.3",
     "axios": "^1.13.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
